Fixed issue with pictures not showing up for Champions with apostrophes etc.

--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: #f0f0f0;
+  background-color: #1e1e2f;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -22,6 +22,21 @@ a:hover {
   color: #535bf2;
 }
 
+.page {
+  flex: 1;
+  background-color: #1e1e2f;
+  height: calc(100vh - 160px);
+  padding: 20px;
+  color: #f0f0f0;
+  font-family: Arial, sans-serif;
+  box-sizing: border-box;
+}
+
+.container {
+    max-width: 1200px;
+    margin: auto;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -31,6 +46,58 @@ body {
   font-family: Arial, sans-serif;
 }
 
+.grid {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  gap: 15px;
+}
+
+.overlay {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(255, 152, 0, 0.85);
+  color: #1e1e2f;
+  padding: 5px 8px;
+  border-radius: 5px;
+  font-size: 10px;
+  font-weight: bold;
+}
+
+.name {
+  margin-top: 5px;
+  font-size: 12px;
+  font-size: bold;
+}
+
+.image {
+  width: 100%;
+  border-radius: 10px;
+  transition: 0.3s;
+  aspect-ratio: 1 / 1;
+  object-fit: cover;
+}
+
+.card {
+  position: relative;
+  cursor: pointer;
+  text-align: center;
+  border-radius: 10px;
+  transition: transform 0.2s, box-shadow 0.2s;
+}
+
+.search {
+  width: 100%;
+  padding: 10px;
+  margin: 20px 0;
+  border-radius: 6px;
+  border: 1px solid #444;
+  background-color: #2c2c3f;
+  color: #f0f0f0;
+  font-size: 14px;
+}
+
 .header-bar {
   display: flex;
   justify-content: flex-end;
@@ -38,6 +105,15 @@ body {
   background-color: #1e1e1e;
   color: #fff;
   -webkit-app-region: drag;
+}
+
+.scroll-container {
+  max-height: 600px;
+  overflow-y: auto;
+  border: 1px solid #444;
+  padding: 15px;
+  border-radius: 10px;
+  background-color: #2c2c3f;
 }
 
 .scroll-container::-webkit-scrollbar {
@@ -77,13 +153,6 @@ button {
 .scroll-container .card:hover {
   transform: translateY(-5px);
   box-shadow: 0 4px 12px rgba(255, 152, 0, 0.5);
-}
-
-.center-vertical {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  height: 400px; /* parent height */
 }
 
 h1 {
